<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bothellhighapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_lunch"
        android:name="com.example.bothellhighapplication.ui.lunch.LunchFragment"
        android:label="@string/menu_lunch"
        tools:layout="@layout/fragment_lunch" />
    <fragment
        android:id="@+id/nav_classes"
        android:name="com.example.bothellhighapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_classes"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.bothellhighapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.bothellhighapplication.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/calendar_fragment" />
</navigation>