<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_classes"
            android:icon="@drawable/clipboard"
            android:title="Contact Us" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/nav_lunch"
            android:icon="@drawable/fresh_seafood"
            android:title="@string/menu_lunch" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calendar"
            android:title="@string/menu_calendar" />

    </group>
</menu>